- Firefox fix for webinar purchase bar - global <p> tag adjusted for line-height and font-size - desktop only, across all pages and card content - fix spacing around headers and panels / cards - Recorded Course removed from top of course details, repositioned to top of meta section - Adds padding underneath tags

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -19,7 +19,7 @@
   //   margin-bottom: 30px;
   // }
   @media (max-width: 768px) {
-    margin-bottom: 8px;
+    margin-bottom: 12px;
   }
 
   @media (min-width: 768px) {
